grammar/frefParser.java
// Generated from fref.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class frefParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINEBREAK=1, FUNCTION=2, IFLEXER=3, IFCLOSE=4, IFTHEN=5, ELSELEXER=6, 
		DOLEXER=7, DOCLOSE=8, WHILELEXER=9, FUNCDEF=10, VARIABLETYPE=11, VARIABLE=12, 
		FUNCTNAME=13, NUMBER=14, WHITE=15, STRING=16, OA=17, OS=18, OM=19, OD=20, 
		EXPRBRACKOPEN=21, EXPRBRACKCLOSE=22, BRACKOPEN=23, BRACKCLOSE=24, EQ=25, 
		EQUALS=26, PARAKOMMA=27, LT=28, GT=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'!'", "'function'", "'if'", "'fi'", "'then:'", "'else:'", 
		"'do'", "'od'", "'while'", "'#'", "'Number'", "VARIABLE", "FUNCTNAME", 
		"NUMBER", "WHITE", "STRING", "'+'", "'-'", "'*'", "'/'", "'<<'", "'>>'", 
		"'('", "')'", "'=='", "'='", "','", "'<'", "'>'"
	};
	public static final int
		RULE_start = 0, RULE_code = 1, RULE_dclrtn = 2, RULE_dclrtndfntn = 3, 
		RULE_dfntn = 4, RULE_compareKeyword = 5, RULE_condition = 6, RULE_ifelseclause = 7, 
		RULE_ifclause = 8, RULE_dowhileclause = 9, RULE_fnctnPrm = 10, RULE_fnctn = 11, 
		RULE_fnctcall = 12, RULE_emptyExpression = 13, RULE_expression = 14;
	public static final String[] ruleNames = {
		"start", "code", "dclrtn", "dclrtndfntn", "dfntn", "compareKeyword", "condition", 
		"ifelseclause", "ifclause", "dowhileclause", "fnctnPrm", "fnctn", "fnctcall", 
		"emptyExpression", "expression"
	};

	@Override
	public String getGrammarFileName() { return "fref.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public frefParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30); code();
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LINEBREAK) | (1L << IFLEXER) | (1L << DOLEXER) | (1L << FUNCDEF) | (1L << VARIABLETYPE) | (1L << VARIABLE) | (1L << FUNCTNAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public DclrtndfntnContext dclrtndfntn(int i) {
			return getRuleContext(DclrtndfntnContext.class,i);
		}
		public List<FnctnContext> fnctn() {
			return getRuleContexts(FnctnContext.class);
		}
		public List<IfclauseContext> ifclause() {
			return getRuleContexts(IfclauseContext.class);
		}
		public TerminalNode LINEBREAK(int i) {
			return getToken(frefParser.LINEBREAK, i);
		}
		public List<DclrtnContext> dclrtn() {
			return getRuleContexts(DclrtnContext.class);
		}
		public List<FnctcallContext> fnctcall() {
			return getRuleContexts(FnctcallContext.class);
		}
		public IfclauseContext ifclause(int i) {
			return getRuleContext(IfclauseContext.class,i);
		}
		public DowhileclauseContext dowhileclause(int i) {
			return getRuleContext(DowhileclauseContext.class,i);
		}
		public List<DclrtndfntnContext> dclrtndfntn() {
			return getRuleContexts(DclrtndfntnContext.class);
		}
		public IfelseclauseContext ifelseclause(int i) {
			return getRuleContext(IfelseclauseContext.class,i);
		}
		public List<IfelseclauseContext> ifelseclause() {
			return getRuleContexts(IfelseclauseContext.class);
		}
		public EmptyExpressionContext emptyExpression(int i) {
			return getRuleContext(EmptyExpressionContext.class,i);
		}
		public DfntnContext dfntn(int i) {
			return getRuleContext(DfntnContext.class,i);
		}
		public List<DfntnContext> dfntn() {
			return getRuleContexts(DfntnContext.class);
		}
		public List<EmptyExpressionContext> emptyExpression() {
			return getRuleContexts(EmptyExpressionContext.class);
		}
		public List<DowhileclauseContext> dowhileclause() {
			return getRuleContexts(DowhileclauseContext.class);
		}
		public List<TerminalNode> LINEBREAK() { return getTokens(frefParser.LINEBREAK); }
		public DclrtnContext dclrtn(int i) {
			return getRuleContext(DclrtnContext.class,i);
		}
		public FnctcallContext fnctcall(int i) {
			return getRuleContext(FnctcallContext.class,i);
		}
		public FnctnContext fnctn(int i) {
			return getRuleContext(FnctnContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(44);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(35); emptyExpression();
						}
						break;

					case 2:
						{
						setState(36); ifelseclause();
						}
						break;

					case 3:
						{
						setState(37); ifclause();
						}
						break;

					case 4:
						{
						setState(38); dowhileclause();
						}
						break;

					case 5:
						{
						setState(39); fnctn();
						}
						break;

					case 6:
						{
						setState(40); dclrtndfntn();
						}
						break;

					case 7:
						{
						setState(41); dclrtn();
						}
						break;

					case 8:
						{
						setState(42); dfntn();
						}
						break;

					case 9:
						{
						setState(43); fnctcall();
						}
						break;
					}
					setState(46); match(LINEBREAK);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(50); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclrtnContext extends ParserRuleContext {
		public DclrtnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclrtn; }
	 
		public DclrtnContext() { }
		public void copyFrom(DclrtnContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationContext extends DclrtnContext {
		public Token type;
		public Token name;
		public TerminalNode VARIABLE() { return getToken(frefParser.VARIABLE, 0); }
		public TerminalNode VARIABLETYPE() { return getToken(frefParser.VARIABLETYPE, 0); }
		public DeclarationContext(DclrtnContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclrtnContext dclrtn() throws RecognitionException {
		DclrtnContext _localctx = new DclrtnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dclrtn);
		try {
			_localctx = new DeclarationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(52); ((DeclarationContext)_localctx).type = match(VARIABLETYPE);
			setState(53); ((DeclarationContext)_localctx).name = match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclrtndfntnContext extends ParserRuleContext {
		public DclrtndfntnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclrtndfntn; }
	 
		public DclrtndfntnContext() { }
		public void copyFrom(DclrtndfntnContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationDefinitionContext extends DclrtndfntnContext {
		public Token type;
		public Token name;
		public TerminalNode VARIABLE() { return getToken(frefParser.VARIABLE, 0); }
		public TerminalNode EQUALS() { return getToken(frefParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode VARIABLETYPE() { return getToken(frefParser.VARIABLETYPE, 0); }
		public DeclarationDefinitionContext(DclrtndfntnContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitDeclarationDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclrtndfntnContext dclrtndfntn() throws RecognitionException {
		DclrtndfntnContext _localctx = new DclrtndfntnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dclrtndfntn);
		try {
			_localctx = new DeclarationDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55); ((DeclarationDefinitionContext)_localctx).type = match(VARIABLETYPE);
			setState(56); ((DeclarationDefinitionContext)_localctx).name = match(VARIABLE);
			setState(57); match(EQUALS);
			setState(58); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DfntnContext extends ParserRuleContext {
		public DfntnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dfntn; }
	 
		public DfntnContext() { }
		public void copyFrom(DfntnContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinitionContext extends DfntnContext {
		public Token name;
		public TerminalNode VARIABLE() { return getToken(frefParser.VARIABLE, 0); }
		public TerminalNode EQUALS() { return getToken(frefParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefinitionContext(DfntnContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DfntnContext dfntn() throws RecognitionException {
		DfntnContext _localctx = new DfntnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dfntn);
		try {
			_localctx = new DefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60); ((DefinitionContext)_localctx).name = match(VARIABLE);
			setState(61); match(EQUALS);
			setState(62); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareKeywordContext extends ParserRuleContext {
		public Token kw;
		public TerminalNode LT() { return getToken(frefParser.LT, 0); }
		public TerminalNode GT() { return getToken(frefParser.GT, 0); }
		public TerminalNode EQ() { return getToken(frefParser.EQ, 0); }
		public CompareKeywordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareKeyword; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitCompareKeyword(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompareKeywordContext compareKeyword() throws RecognitionException {
		CompareKeywordContext _localctx = new CompareKeywordContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_compareKeyword);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			((CompareKeywordContext)_localctx).kw = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << LT) | (1L << GT))) != 0)) ) {
				((CompareKeywordContext)_localctx).kw = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GTCondContext extends ConditionContext {
		public ExpressionContext left;
		public Token operator;
		public ExpressionContext right;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode GT() { return getToken(frefParser.GT, 0); }
		public GTCondContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitGTCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LTCondContext extends ConditionContext {
		public ExpressionContext left;
		public Token operator;
		public ExpressionContext right;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LT() { return getToken(frefParser.LT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public LTCondContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitLTCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EQCondContext extends ConditionContext {
		public ExpressionContext left;
		public Token operator;
		public ExpressionContext right;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode EQ() { return getToken(frefParser.EQ, 0); }
		public EQCondContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitEQCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new EQCondContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66); ((EQCondContext)_localctx).left = expression(0);
				setState(67); ((EQCondContext)_localctx).operator = match(EQ);
				setState(68); ((EQCondContext)_localctx).right = expression(0);
				}
				break;

			case 2:
				_localctx = new LTCondContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70); ((LTCondContext)_localctx).left = expression(0);
				setState(71); ((LTCondContext)_localctx).operator = match(LT);
				setState(72); ((LTCondContext)_localctx).right = expression(0);
				}
				break;

			case 3:
				_localctx = new GTCondContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74); ((GTCondContext)_localctx).left = expression(0);
				setState(75); ((GTCondContext)_localctx).operator = match(GT);
				setState(76); ((GTCondContext)_localctx).right = expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseclauseContext extends ParserRuleContext {
		public ConditionContext cond;
		public CodeContext ifcode;
		public CodeContext elsecode;
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode IFLEXER() { return getToken(frefParser.IFLEXER, 0); }
		public TerminalNode IFCLOSE() { return getToken(frefParser.IFCLOSE, 0); }
		public TerminalNode IFTHEN() { return getToken(frefParser.IFTHEN, 0); }
		public TerminalNode ELSELEXER() { return getToken(frefParser.ELSELEXER, 0); }
		public TerminalNode EXPRBRACKCLOSE() { return getToken(frefParser.EXPRBRACKCLOSE, 0); }
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public TerminalNode EXPRBRACKOPEN() { return getToken(frefParser.EXPRBRACKOPEN, 0); }
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public IfelseclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelseclause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitIfelseclause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfelseclauseContext ifelseclause() throws RecognitionException {
		IfelseclauseContext _localctx = new IfelseclauseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifelseclause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(IFLEXER);
			setState(81); match(EXPRBRACKOPEN);
			setState(82); ((IfelseclauseContext)_localctx).cond = condition();
			setState(83); match(EXPRBRACKCLOSE);
			setState(84); match(IFTHEN);
			setState(85); ((IfelseclauseContext)_localctx).ifcode = code();
			setState(86); match(ELSELEXER);
			setState(87); ((IfelseclauseContext)_localctx).elsecode = code();
			setState(88); match(IFCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfclauseContext extends ParserRuleContext {
		public ConditionContext cond;
		public CodeContext ifcode;
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode IFLEXER() { return getToken(frefParser.IFLEXER, 0); }
		public TerminalNode IFCLOSE() { return getToken(frefParser.IFCLOSE, 0); }
		public TerminalNode IFTHEN() { return getToken(frefParser.IFTHEN, 0); }
		public TerminalNode EXPRBRACKCLOSE() { return getToken(frefParser.EXPRBRACKCLOSE, 0); }
		public TerminalNode EXPRBRACKOPEN() { return getToken(frefParser.EXPRBRACKOPEN, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public IfclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifclause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitIfclause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfclauseContext ifclause() throws RecognitionException {
		IfclauseContext _localctx = new IfclauseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifclause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(IFLEXER);
			setState(91); match(EXPRBRACKOPEN);
			setState(92); ((IfclauseContext)_localctx).cond = condition();
			setState(93); match(EXPRBRACKCLOSE);
			setState(94); match(IFTHEN);
			setState(95); ((IfclauseContext)_localctx).ifcode = code();
			setState(96); match(IFCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DowhileclauseContext extends ParserRuleContext {
		public CodeContext docode;
		public ConditionContext cond;
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode DOLEXER() { return getToken(frefParser.DOLEXER, 0); }
		public TerminalNode DOCLOSE() { return getToken(frefParser.DOCLOSE, 0); }
		public TerminalNode EXPRBRACKCLOSE() { return getToken(frefParser.EXPRBRACKCLOSE, 0); }
		public TerminalNode WHILELEXER() { return getToken(frefParser.WHILELEXER, 0); }
		public TerminalNode EXPRBRACKOPEN() { return getToken(frefParser.EXPRBRACKOPEN, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public DowhileclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dowhileclause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitDowhileclause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DowhileclauseContext dowhileclause() throws RecognitionException {
		DowhileclauseContext _localctx = new DowhileclauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dowhileclause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(DOLEXER);
			setState(99); ((DowhileclauseContext)_localctx).docode = code();
			setState(100); match(WHILELEXER);
			setState(101); match(EXPRBRACKOPEN);
			setState(102); ((DowhileclauseContext)_localctx).cond = condition();
			setState(103); match(EXPRBRACKCLOSE);
			setState(104); match(DOCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FnctnPrmContext extends ParserRuleContext {
		public FnctnPrmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnctnPrm; }
	 
		public FnctnPrmContext() { }
		public void copyFrom(FnctnPrmContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionParameterContext extends FnctnPrmContext {
		public Token type;
		public Token name;
		public TerminalNode VARIABLE() { return getToken(frefParser.VARIABLE, 0); }
		public TerminalNode VARIABLETYPE() { return getToken(frefParser.VARIABLETYPE, 0); }
		public FunctionParameterContext(FnctnPrmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitFunctionParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FnctnPrmContext fnctnPrm() throws RecognitionException {
		FnctnPrmContext _localctx = new FnctnPrmContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fnctnPrm);
		try {
			_localctx = new FunctionParameterContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106); ((FunctionParameterContext)_localctx).type = match(VARIABLETYPE);
			setState(107); ((FunctionParameterContext)_localctx).name = match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FnctnContext extends ParserRuleContext {
		public Token functionname;
		public Token ret;
		public TerminalNode EXPRBRACKOPEN(int i) {
			return getToken(frefParser.EXPRBRACKOPEN, i);
		}
		public FnctnPrmContext fnctnPrm(int i) {
			return getRuleContext(FnctnPrmContext.class,i);
		}
		public List<TerminalNode> PARAKOMMA() { return getTokens(frefParser.PARAKOMMA); }
		public TerminalNode EXPRBRACKCLOSE(int i) {
			return getToken(frefParser.EXPRBRACKCLOSE, i);
		}
		public TerminalNode PARAKOMMA(int i) {
			return getToken(frefParser.PARAKOMMA, i);
		}
		public TerminalNode FUNCDEF(int i) {
			return getToken(frefParser.FUNCDEF, i);
		}
		public List<TerminalNode> EXPRBRACKCLOSE() { return getTokens(frefParser.EXPRBRACKCLOSE); }
		public TerminalNode FUNCTNAME() { return getToken(frefParser.FUNCTNAME, 0); }
		public List<TerminalNode> EXPRBRACKOPEN() { return getTokens(frefParser.EXPRBRACKOPEN); }
		public List<FnctnPrmContext> fnctnPrm() {
			return getRuleContexts(FnctnPrmContext.class);
		}
		public TerminalNode VARIABLETYPE() { return getToken(frefParser.VARIABLETYPE, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public List<TerminalNode> FUNCDEF() { return getTokens(frefParser.FUNCDEF); }
		public FnctnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnctn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof frefVisitor ) return ((frefVisitor<? extends T>)visitor).visitFnctn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FnctnContext fnctn() throws RecognitionException {
		FnctnContext _localctx = new FnctnContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fnctn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(FUNCDEF);
			setState(110); ((FnctnContext)_localctx).functionname = match(FUNCTNAME);
			setState(111); match(EXPRBRACKOPEN);
			setState(120);
			_la = _input.LA(1);
			if (_la==VARIABLETYPE) {
				{
				setState(112); fnctnPrm();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PARAKOMMA) {
					{
					{
					setState(113); match(PARAKOMMA);
					setState(114); fnctnPrm();
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}
